--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "interledger",
@@ -22,9 +23,11 @@
     "eventemitter3": "^3.0.1",
     "ilp-packet": "^2.2.0",
     "ilp-protocol-ildcp": "^1.0.0",
-    "oer-utils": "^1.3.4"
+    "oer-utils": "^2.0.0"
   },
   "devDependencies": {
-    "@types/debug": "0.0.30"
+    "@types/debug": "0.0.30",
+    "ilp-plugin-btp": "^1.1.8",
+    "source-map-support": "^0.5.3"
   }
 }
