--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "description": "",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
+  "files": [
+    "src/*.js*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "tsc",
+    "lint": "tslint --project .",
+    "test": "nyc mocha"
   },
   "keywords": [
     "interledger",
@@ -26,8 +32,39 @@
     "oer-utils": "^2.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/chai-as-promised": "^7.1.0",
     "@types/debug": "0.0.30",
+    "@types/mocha": "^2.2.48",
+    "@types/sinon": "^4.3.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "ilp-plugin-btp": "^1.1.8",
-    "source-map-support": "^0.5.3"
+    "mocha": "^5.0.4",
+    "mocha-typescript": "^1.1.12",
+    "nyc": "^11.6.0",
+    "source-map-support": "^0.5.3",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "tslint-config-standard": "^7.0.0",
+    "typescript": "^2.7.2"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 80,
+    "statements": 80,
+    "functions": 80,
+    "branches": 80,
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "test/**/*.js"
+    ],
+    "reporter": [
+      "lcov",
+      "text-summary"
+    ],
+    "all": true
   }
 }
