--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mocha": "^5.0.4",
     "mocha-typescript": "^1.1.12",
     "nyc": "^11.6.0",
+    "sinon": "^4.4.6",
     "source-map-support": "^0.5.3",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
