--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "@types/chai": "^4.1.2",
     "@types/chai-as-promised": "^7.1.0",
     "@types/debug": "0.0.30",
+    "@types/lolex": "^2.1.1",
     "@types/mocha": "^2.2.48",
     "@types/sinon": "^4.3.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "ilp-plugin-btp": "^1.1.8",
+    "lolex": "^2.3.2",
     "mocha": "^5.0.4",
     "mocha-typescript": "^1.1.12",
     "nyc": "^11.6.0",
