chore: make sure types are published

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
-    "src/*.js*"
+    "src/*.js*",
+    "src/*.d.ts"
   ],
   "scripts": {
     "build": "tsc",
