--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "tsc",
     "prepare": "tsc",
     "lint": "tslint --project .",
-    "test": "nyc mocha"
+    "test": "nyc mocha",
+    "doc": "typedoc --options typedoc.js src"
   },
   "keywords": [
     "interledger",
@@ -51,6 +52,7 @@
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
+    "typedoc": "^0.11.1",
     "typescript": "^2.7.2"
   },
   "nyc": {
