doc: hide utils from docs

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "tsc",
     "lint": "tslint --project .",
     "test": "nyc mocha",
-    "doc": "typedoc --options typedoc.js src"
+    "doc": "typedoc --options typedoc.js src/index.ts src/connection.ts src/stream.ts"
   },
   "keywords": [
     "interledger",
