docs: add description, usage, badges to readme
resolves https://github.com/interledgerjs/ilp-protocol-stream/issues/11

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ilp-protocol-stream",
   "version": "0.1.2",
-  "description": "",
+  "description": "Interledger Transport Protocol for sending multiple streams of money and data over ILP.",
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
