--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^9.6.17",
     "bignumber.js": "^6.0.0",
     "debug": "^3.1.0",
+    "ilp-logger": "^1.0.1",
     "ilp-packet": "^2.2.0",
     "ilp-protocol-ildcp": "^1.0.0",
     "oer-utils": "^2.0.1",
