--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,131 +1,114 @@
 version: 2
+aliases:
+  # From https://circleci.com/orbs/registry/orb/threetreeslight/puppeteer
+  - &install-puppeteer |
+    sudo apt-get install -yq \
+    gconf-service libasound2 libatk1.0-0 libatk-bridge2.0-0 libc6 libcairo2 libcups2 libdbus-1-3 \
+    libexpat1 libfontconfig1 libgcc1 libgconf-2-4 libgdk-pixbuf2.0-0 libglib2.0-0 libgtk-3-0 libnspr4 \
+    libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 \
+    libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 ca-certificates \
+    fonts-liberation libappindicator1 libnss3 lsb-release xdg-utils wget
 jobs:
-  build:
+  build_node_v10:
     docker:
       - image: circleci/node:10
-
     working_directory: ~/repo
-
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - v10-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
+          - v10-dependencies-
+      - run: *install-puppeteer
       - run: npm install
-
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
+          key: v10-dependencies-{{ checksum "package.json" }}
       - run: npm test
-
-      # lint
       - run: npm run lint
-
-      # upload coverage to codecov.io
       - run: npm run codecov
 
-  # Make sure the tests work on Node v8 as well
-  build_node_v8:
+  build_node_v12:
     docker:
-      - image: circleci/node:8
-
-    working_directory: ~/repo_v8
-
+      - image: circleci/node:12
+    working_directory: ~/repo_v12
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
-          - v8-dependencies-{{ checksum "package.json" }}
+          - v12-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
-          - v8-dependencies-
-
+          - v12-dependencies-
+      - run: *install-puppeteer
       - run: npm install
-
       - save_cache:
           paths:
             - node_modules
-          key: v8-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
+          key: v12-dependencies-{{ checksum "package.json" }}
       - run: npm test
 
   publish_docs:
     docker:
-      - image: circleci/node:8
-
+      - image: circleci/node:10
     working_directory: ~/repo
-
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
       - add_ssh_keys
-
       - run: npm run publish-docs
 
   publish_to_npm:
     docker:
-      - image: circleci/node:8
-
+      - image: circleci/node:10
     working_directory: ~/repo
-
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
       - run: mv npmrc-env .npmrc
-
       - run:
           name: Publish to NPM (only if a new version has been tagged)
           command: if [ "$(npm show ilp-protocol-stream version)" != "$(npm ls --depth=-1 2>/dev/null | head -1 | cut -f 1 -d " " | cut -f 2 -d @)" ] ; then npm publish ; fi
-
 
 workflows:
   version: 2
   build_and_publish:
     jobs:
-      - build:
+      - build_node_v10:
           filters:
             branches:
               ignore:
                 - gh-pages
-      - build_node_v8:
+      - build_node_v12:
           filters:
             branches:
               ignore:
                 - gh-pages
       - publish_docs:
           requires:
-            - build
+            - build_node_v10
+            - build_node_v12
           filters:
             branches:
               only:
                 - master
       - publish_to_npm:
           requires:
-            - build
+            - build_node_v10
+            - build_node_v12
           filters:
             branches:
               only:
