--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prepare": "npm run build",
     "lint": "tslint --project .",
     "test": "TS_NODE_PROJECT='./tsconfig.test.json' mocha",
-    "test-cover": "nyc --extension .ts mocha",
+    "test-cover": "TS_NODE_PROJECT='./tsconfig.test.json' nyc --extension .ts mocha",
     "doc": "typedoc --options typedoc.js src/index.ts src/connection.ts src/stream.ts",
     "publish-docs": "npm run doc && node scripts/publish-docs.js",
     "codecov": "codecov"
