--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "ilp-packet": "^3.0.9",
     "ilp-protocol-ildcp": "^2.1.4",
     "long": "^4.0.0",
-    "oer-utils": "^5.0.1"
+    "oer-utils": "^5.0.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.3",
@@ -56,6 +57,7 @@
     "@types/mocha": "^5.2.5",
     "@types/puppeteer": "^1.19.1",
     "@types/sinon": "^5.0.1",
+    "@types/uuid": "^3.4.6",
     "@types/webpack": "^4.39.1",
     "benchmark": "^2.1.4",
     "bignumber.js": "^7.2.1",
